istio/mirror/vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - httpbin
  http:
  - mirrors:
    - destination:
        host: httpbin
        subset: v2
    route:
    - destination:
        host: httpbin
        subset: v1
      weight: 100
